# OpenTeam

./: .gitignore  Cargo.toml  README.en.md  README.md  llm_config.yaml
.omo/run-continuation/: ses_1abf983f4ffeMXpJPMw3pWimiO.json
agents/: assistant.yaml  pm.yaml
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  feishu.rs  lib.rs  llm.rs  registry.rs
crates/core/src/agent/: handle.rs  inbox.rs  manager.rs  mod.rs
crates/core/src/assistant/: assistant.rs  mod.rs  time_policy.rs  types.rs
crates/core/src/config/: agent.rs  feishu.rs  llm.rs  mod.rs  provider.rs
crates/core/src/feishu/: bridge.rs  channel_bridge.rs  message_queue.rs  mod.rs  token.rs  types.rs
crates/core/src/llm/: gateway.rs  mod.rs  models.rs  provider.rs  rate_limiter.rs
crates/core/src/mcp/: builtin.rs  config.rs  executor.rs  mod.rs  registry.rs
crates/core/src/memory/: compressor.rs  forgetting.rs  migration.rs  mod.rs  store.rs  types.rs  vectorizer.rs
crates/core/src/plugin/: manager.rs  transport.rs
crates/core/src/registry/: mod.rs  registry.rs
crates/core/src/router/: router.rs
crates/core/src/secretary/: mod.rs  secretary.rs  time_policy.rs
crates/core/src/skill/: registry.rs
crates/core/tests/: smoke_test.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  main.rs  ui.rs
crates/tui/src/pages/: agents.rs  feishu.rs  home.rs  logs.rs  memory.rs  mod.rs  tasks.rs
crates/tui/src/widgets/: mod.rs
docs/superpowers/plans/: 2026-05-24-feishu-agent-orchestrator-phase1-core.md  2026-05-24-feishu-agent-orchestrator-phase2-intelligence.md  2026-05-24-feishu-agent-orchestrator-phase3-tui-plugins.md  2026-05-27-llm-feishu-skill-overhaul.md  2026-05-28-opencode-full-alignment.md  2026-05-28-opencode-provider-system.md
docs/superpowers/specs/: 2026-05-23-feishu-agent-orchestrator-design.md
plugins/examples/: hello-plugin.js
plugins/feishu-channel/: index.js  package.json
plugins/host/: package.json
plugins/host/sdk/: index.js
plugins/host/src/: index.js  registry.js  transport.js
skills/feishu-doc/: SKILL.md
skills/web-search/: SKILL.md
