[workspace]
resolver = "2"
members = ["crates/core", "crates/tui"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tiktoken-rs = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde", "std"], default-features = false }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
