[package]
name = "feishu-agent-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tiktoken-rs.workspace = true
sqlx.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio-util.workspace = true
json_rpc = "0.2"  # Plugin IPC (Phase 3); crate name uses underscore not hyphen
notify.workspace = true
regex.workspace = true
once_cell.workspace = true
